# SystemC-Univercity-Project

./: CMakeLists.txt  Readme.md
src/: antenna.cpp  antenna.h  camera.cpp  camera.h  channel.cpp  channel.h  control_center.cpp  control_center.h  cpu.cpp  cpu.h  defs.h  devices.h  engine.cpp  engine.h  gelio.cpp  gelio.h  gyroscope.cpp  gyroscope.h  helper.cpp  helper.h  interface.h  logger.cpp  logger.h  main.cpp  src.cmake  switch.cpp  switch.h
